<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="video_list_screen_description">Screen with a video thumbnails list</string>

    <!--    AppBar-->
    <string name="appbar_title">BlueTube</string>
    <string name="appbar_logo_descr">Blue Tube Icon</string>
    <string name="appbar_search_icon_descr">Search icon</string>
    <string name="appbar_close_icon_descr">Close icon</string>
    <string name="search_placeholder">Enter search text</string>
    <!--    Video appearance-->
    <string name="video_thumbnail_item">Video thumbnail item</string>
</resources>